# powerweek1

./: Exercises  FAQ.md
code/examples/benchmark/: Makefile  test.cxx
example/Vc/complexKernel/: Makefile  kernel2.cpp  main.cpp
example/Vc/complexKernel_googlebench/: Makefile  Makefile~  README  README~  kernel1.cpp  kernel2.cpp  kernel3.cpp  main.cpp
example/Vc/simple/: Makefile  masks.cpp  normalize.cpp  normalize_template.cpp  (+4 more)
example/basicrootio/: README
example/basicrootio/trees_userclass/: CMakeLists.txt  LinkDef.h  Position.h  README  main.cxx
example/basicrootio/write_read/: CMakeLists.txt  Foo.cxx  Foo.h  LinkDef.h  README  main.cxx
example/boost_option/: Makefile  main.cc
example/class/: Makefile  main.cc  particle.cc  particle.h
example/cmake_simple/: CMakeLists.txt
example/cpp11/: Makefile  README  enum_stupid.cpp  enum_stupid_fail.cpp  final_fail.cpp  forward.cpp  move_string.cpp  move_tests.cpp  nullptr.cpp  nullptr_fail.cpp  override_bad.cpp  override_fail.cpp  range_based.cpp  range_based_root.cpp
example/doxygen/: twoparticle.C
example/gdb/: floatCompare.cpp  main.cpp  makefile  minimal.cpp
example/google_benchmark/: test.cxx
example/libraries/: Makefile  hello_dynamic
example/performance/: README
example/rootaslib/: #CMakeLists.txt#  README  main.cxx
example/smart_pointers/: driver.cpp  makefile
example/stopwatch/: CMakeLists.txt  README  main.cxx  stopwatch.h
example/template/: Makefile  main.cpp  vector.cpp
example/trees/: #example.C#  Makefile  SimLinkDef.h  event.cpp  event.h  main.cpp  particle.h  read.C
(+76 files in other folders)
